Cambios página web

--- a/apps/accesos/templates/accesos/info_acceso_cuantico.html
+++ b/apps/accesos/templates/accesos/info_acceso_cuantico.html
@@ -8,6 +8,7 @@
     <meta charset="UTF-8">
     <title>Acceso Cuántico — Información del sistema</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="{% static 'img/favicon_qr.png' %}">
 
     <!-- TailwindCSS (para footer y utilidades) -->
     <link rel="stylesheet" href="{% static 'css/tailwind.css' %}">
